--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -292,7 +292,7 @@ button {
 }
 
 .section-title--keycolor {
-  background-color: #fff262;
+  background-color: #8ec54a;
 }
 
 .section-title--story {
