--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -292,7 +292,7 @@ button {
 }
 
 .section-title--keycolor {
-  background-color: #8ec54a;
+  background-color: #bbe2f1;
 }
 
 .section-title--story {
