--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,7 +239,7 @@ button {
 * Color
 *********************/
 .bg-color--keycolor {
-  background-color: #fff262;
+  background-color: #bbe2f1;
 }
 
 .bg-color--subcolor {
@@ -274,7 +274,7 @@ button {
   line-height: 1.75;
   text-align: center;
   padding: 9px 20px;
-  background-color: #d9e021;
+  background-color: #fff2b8;
   margin: 0 -20px 20px -20px;
 }
 
